# aa-rs

./: Cargo.toml  README.md
examples/: rust-logo.rs
src/: cli.rs  lib.rs  utils.rs
src/filter/: line.rs  shrink.rs
