[package]
name = "aa-rs"
version = "0.1.3"
authors = ["Luke Wilson <asmoaesl@gmail.com>", "Yusuke Sangenya (genya0407) <longinus.eva@gmail.com>"]
repository = "https://github.com/asmoaesl/aa-rs"
keywords = ["image", "png", "ascii", "art"]
license-file = "LICENSE"
readme = "README.md"
description = "Modern image to ASCII art conversion library for Rust."

[[bin]]
name = "aa-rs"
path = "src/cli.rs"

[dependencies]
ndarray = { version = "0.10.0" }
image = "0.18.0"
string-error = "0.1.0"
getopts = "0.2"
base64 = "~0.6.0"
