[package]
name = "aa-rs"
version = "1.0.0"
authors = ["Luke Wilson <asmoaesl@gmail.com>", "Yusuke Sangenya (genya0407) <longinus.eva@gmail.com>"]
repository = "https://github.com/asmoaesl/aa-rs"
keywords = ["image", "png", "ascii", "art"]
license-file = "LICENSE"
readme = "README.md"
description = "Modern image to ASCII art conversion library for Rust."
edition = "2018"

[dependencies]
ndarray = "0.12.1"
image = "0.21.2"
string-error = "0.1.0"
base64 = "0.10.1"
